--- a/public/style.css
+++ b/public/style.css
@@ -916,7 +916,8 @@ section {
         border: 0px;
         border-bottom: 1px solid #000;
         padding: 0 0 0.25em 0;
-        width: 100%; }
+        width: 100%;
+        border-radius: 0px !important; }
     section.left .bottom .left {
       padding-right: 2rem; }
     section.left .bottom .right {
@@ -943,6 +944,8 @@ section {
   color: #000; }
 
 @media screen and (max-width: 800px) {
+  html {
+    font-size: 40%; }
   section.left, section.right {
     width: 100%;
     height: auto; }
