--- a/public/style.css
+++ b/public/style.css
@@ -837,7 +837,8 @@ header {
   padding: 3rem;
   z-index: 5; }
   header .logo {
-    display: block; }
+    display: table;
+    margin: auto auto; }
     header .logo img {
       width: 2.5rem;
       height: auto;
@@ -861,15 +862,16 @@ section {
     height: 100vh; }
   section.left .top {
     padding-top: 3rem; }
+    section.left .top i {
+      font-family: "DTLI", serif;
+      font-style: normal; }
     section.left .top p {
       font-family: "DTL", serif;
       font-size: 3rem;
       margin-bottom: 5rem;
       line-height: 1.6;
-      -webkit-font-smoothing: antialiased; }
-      section.left .top p i {
-        font-family: "DTLI", serif;
-        font-style: normal; }
+      -webkit-font-smoothing: antialiased;
+      max-width: 60rem; }
     section.left .top a {
       display: table;
       padding-bottom: 0.25em;
@@ -878,6 +880,21 @@ section {
       letter-spacing: 0.07em;
       text-transform: uppercase;
       position: relative; }
+      section.left .top a i {
+        text-transform: none;
+        letter-spacing: 0;
+        position: relative;
+        left: -0.1em; }
+      section.left .top a img {
+        width: 2rem;
+        height: auto;
+        display: inline-block;
+        margin-left: 0.25rem;
+        -webkit-transition: 0.3s ease all;
+        -moz-transition: 0.3s ease all;
+        transition: 0.3s ease all; }
+      section.left .top a:hover img {
+        margin-left: 0.75rem; }
       section.left .top a:hover:after {
         width: 100%; }
       section.left .top a:after {
@@ -911,18 +928,42 @@ section {
         outline: none !important;
         font-size: 1.2rem;
         color: #000;
+        font-family: "DTLI", serif;
         -webkit-appearance: none;
         -moz-appearance: none;
         appearance: none;
         border: 0px;
         border-bottom: 1px solid #000;
         padding: 0 0 0.25em 0;
-        width: 100%;
-        border-radius: 0px !important; }
+        width: calc(100% - 6rem);
+        border-radius: 0px !important;
+        float: left; }
+      section.left .bottom .left form button,
+      section.left .bottom .right form button {
+        outline: none !important;
+        width: 6rem;
+        -webkit-appearance: none;
+        -moz-appearance: none;
+        appearance: none;
+        border: 0px;
+        border-bottom: 1px solid;
+        padding: 0.5rem 0px 0.4rem;
+        text-align: right;
+        border-radius: 0px;
+        background: transparent;
+        float: left;
+        font-size: 1rem;
+        text-transform: uppercase;
+        font-family: "G", sans-serif;
+        letter-spacing: 0.15em; }
+        section.left .bottom .left form button img,
+        section.left .bottom .right form button img {
+          width: 10px;
+          height: auto; }
     section.left .bottom .left {
-      padding-right: 2rem; }
+      padding-right: 3rem; }
     section.left .bottom .right {
-      padding-left: 2rem; }
+      padding-left: 3rem; }
 
 .slideshow {
   width: 100%;
@@ -956,5 +997,7 @@ section {
       bottom: 0;
       left: 0;
       right: 0; }
+      section.left .bottom .right form button, section.right .bottom .right form button {
+        font-size: 6px; }
   section.right {
     height: 100vh; } }
