--- a/public/style.css
+++ b/public/style.css
@@ -840,7 +840,9 @@ header {
     display: table;
     margin: auto auto; }
     header .logo img {
-      width: 2.5rem;
+      width: 3.5rem;
+      position: relative;
+      top: -1rem;
       height: auto;
       display: block;
       margin: auto auto; }
